--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,46 @@
-
 name: Deploy MkDocs to GitHub Pages
+
 on:
   push:
-    branches: [ main ]          # 推送 main 分支触发
+    branches: [ main ]
     paths:
       - 'docs/**'
       - 'mkdocs.yml'
+
+# 关键：给 GITHUB_TOKEN 写入权限，允许推送 gh-pages
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: 检出代码
+      - name: 检出代码（全量，含历史；避免浅克隆导致的 git 错误）
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          # persist-credentials 保持默认 true 即可
 
-      - name: 设置Python环境
+      - name: 设置 Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.11'
 
-      - name: 安装MkDocs及主题
+      - name: 安装 MkDocs 与主题
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs-material
+          pip install mkdocs mkdocs-material
 
-      - name: 构建静态文档
-        run: mkdocs build   # 生成到 ./site
+      - name: 构建静态站点
+        run: mkdocs build --strict
+        # 成功后会生成 ./site 目录
 
-      - name: 部署到GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: 部署到 GitHub Pages（稳）
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages  # 目标分支
-          folder: site      # 构建输出目录
+          github_token: ${{ secrets.GITHUB_TOKEN }}  # 用默认令牌
+          publish_branch: gh-pages                  # 目标分支
+          publish_dir: ./site                       # 要发布的目录
+          user_name: ${{ github.actor }}
+          user_email: ${{ github.actor }}@users.noreply.github.com
+          # single_commit: true  # 可选：只保留一条提交历史
